--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-  "preview": "vite preview",
-  "hydrate:posters": "node ./scripts/hydrate-posters.js"
+    "preview": "vite preview",
+    "hydrate:posters": "node ./scripts/hydrate-posters.js",
+    "strip:comments": "node scripts/remove-comments.cjs"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
@@ -25,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "strip-comments": "^2.0.1",
     "vite": "^7.1.2"
   }
 }
